--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>表格_丽高ERP后台管理系统</title>
+<title>ERP后台管理系统</title>
 <link rel="stylesheet" href="app/css/bootstrap.min.css" />
 <link rel="stylesheet" href="app/css/matrix-style.css" />
 <link rel="stylesheet" href="app/css/matrix-media.css" />
@@ -215,7 +215,7 @@
                   <td class="hidden-480">LE0003</td>
                   <td class="hidden-480">6955052900027</td>
                   <td>儿童润肤乳</td>
-				  <td class="hidden-phone">发网:1690 丽高:0 虚拟:0 </td>
+				  <td class="hidden-phone">发网:1690 公司:0 虚拟:0 </td>
 				  <td>100</td>
 				  <td><em class="tab-state"><span class="sr-only">状态:</span>启用</em><span class="glyphicon glyphicon-play-circle green" aria-hidden="true"> </span><em class="tab-state"><span class="sr-only">状态:</span>禁用</em><span class="glyphicon glyphicon-ban-circle red" aria-hidden="true"> </span></td>
 				  <td><button type="button" class="btn btn-primary btn-xs">编辑</button><button type="button" class="btn btn-danger btn-xs">删除</button></td>
@@ -225,7 +225,7 @@
                   <td class="hidden-480">LE0003</td>
                   <td class="hidden-480">6955052900027</td>
                   <td>儿童润肤乳</td>
-				  <td class="hidden-phone">发网:1690 丽高:0 虚拟:0 </td>
+				  <td class="hidden-phone">发网:1690 公司:0 虚拟:0 </td>
 				  <td>100</td>
 				  <td><em class="tab-state"><span class="sr-only">状态:</span>启用</em><span class="glyphicon glyphicon-play-circle green" aria-hidden="true"> </span><em class="tab-state"><span class="sr-only">状态:</span>禁用</em><span class="glyphicon glyphicon-ban-circle red" aria-hidden="true"> </span></td>
 				  <td><button type="button" class="btn btn-primary btn-xs">编辑</button><button type="button" class="btn btn-danger btn-xs">删除</button></td>
@@ -235,7 +235,7 @@
                   <td class="hidden-480">LE0003</td>
                   <td class="hidden-480">6955052900027</td>
                   <td>儿童润肤乳</td>
-				  <td class="hidden-phone">发网:1690 丽高:0 虚拟:0 </td>
+				  <td class="hidden-phone">发网:1690 公司:0 虚拟:0 </td>
 				  <td>100</td>
 				  <td><em class="tab-state"><span class="sr-only">状态:</span>启用</em><span class="glyphicon glyphicon-play-circle green" aria-hidden="true"> </span><em class="tab-state"><span class="sr-only">状态:</span>禁用</em><span class="glyphicon glyphicon-ban-circle red" aria-hidden="true"> </span></td>
 				  <td><button type="button" class="btn btn-primary btn-xs">编辑</button><button type="button" class="btn btn-danger btn-xs">删除</button></td>
@@ -245,7 +245,7 @@
                   <td class="hidden-480">LE0003</td>
                   <td class="hidden-480">6955052900027</td>
                   <td>儿童润肤乳</td>
-				  <td class="hidden-phone">发网:1690 丽高:0 虚拟:0 </td>
+				  <td class="hidden-phone">发网:1690 公司:0 虚拟:0 </td>
 				  <td>100</td>
 				  <td><em class="tab-state"><span class="sr-only">状态:</span>启用</em><span class="glyphicon glyphicon-play-circle green" aria-hidden="true"> </span><em class="tab-state"><span class="sr-only">状态:</span>禁用</em><span class="glyphicon glyphicon-ban-circle red" aria-hidden="true"> </span></td>
 				  <td><button type="button" class="btn btn-primary btn-xs">编辑</button><button type="button" class="btn btn-danger btn-xs">删除</button></td>
@@ -255,7 +255,7 @@
                   <td class="hidden-480">LE0003</td>
                   <td class="hidden-480">6955052900027</td>
                   <td>儿童润肤乳</td>
-				  <td class="hidden-phone">发网:1690 丽高:0 虚拟:0 </td>
+				  <td class="hidden-phone">发网:1690 公司:0 虚拟:0 </td>
 				  <td>100</td>
 				  <td><em class="tab-state"><span class="sr-only">状态:</span>启用</em><span class="glyphicon glyphicon-play-circle green" aria-hidden="true"> </span><em class="tab-state"><span class="sr-only">状态:</span>禁用</em><span class="glyphicon glyphicon-ban-circle red" aria-hidden="true"> </span></td>
 				  <td><button type="button" class="btn btn-primary btn-xs">编辑</button><button type="button" class="btn btn-danger btn-xs">删除</button></td>
@@ -265,7 +265,7 @@
                   <td class="hidden-480">LE0003</td>
                   <td class="hidden-480">6955052900027</td>
                   <td>儿童润肤乳</td>
-				  <td class="hidden-phone">发网:1690 丽高:0 虚拟:0 </td>
+				  <td class="hidden-phone">发网:1690 公司:0 虚拟:0 </td>
 				  <td>100</td>
 				  <td><em class="tab-state"><span class="sr-only">状态:</span>启用</em><span class="glyphicon glyphicon-play-circle green" aria-hidden="true"> </span><em class="tab-state"><span class="sr-only">状态:</span>禁用</em><span class="glyphicon glyphicon-ban-circle red" aria-hidden="true"> </span></td>
 				  <td><button type="button" class="btn btn-primary btn-xs">编辑</button><button type="button" class="btn btn-danger btn-xs">删除</button></td>
@@ -275,7 +275,7 @@
                   <td class="hidden-480">LE0003</td>
                   <td class="hidden-480">6955052900027</td>
                   <td>儿童润肤乳</td>
-				  <td class="hidden-phone">发网:1690 丽高:0 虚拟:0 </td>
+				  <td class="hidden-phone">发网:1690 公司:0 虚拟:0 </td>
 				  <td>100</td>
 				  <td><em class="tab-state"><span class="sr-only">状态:</span>启用</em><span class="glyphicon glyphicon-play-circle green" aria-hidden="true"> </span><em class="tab-state"><span class="sr-only">状态:</span>禁用</em><span class="glyphicon glyphicon-ban-circle red" aria-hidden="true"> </span></td>
 				  <td><button type="button" class="btn btn-primary btn-xs">编辑</button><button type="button" class="btn btn-danger btn-xs">删除</button></td>
@@ -688,7 +688,7 @@
 
 <!--Footer-part-->
 <div class="row-fluid">
-  <div id="footer" class="span12"> Copyright &copy; 2015 Shanghai Top Beauty Industrial Co.,Ltd</div>
+	<div id="footer" class="span12"> Copyright &copy; Goonic All rights reserved.</div>
 </div>
 <!--end-Footer-part-->
 <script src="app/js/jquery.min.js"></script>
