--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>登录中心_丽高ERP后台管理系统</title>
+<title>登录中心_ERP后台管理系统</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="app/css/bootstrap.min.css">
 	  <link rel="stylesheet" href="app/css/indlog.css">
@@ -18,7 +18,7 @@
 
 <div class="container">
    <div id="logo">
-            <img src="app/images/erp_topbeauty.png" alt="丽高实业Logo">
+            <img src="app/images/erp_login.png" alt="logo">
         </div>
         <div id="loginbox">            
             <form action="">
@@ -52,7 +52,7 @@
         </div>
 </div>
 <!-- JS Part -->
-<script src="app/js/jquery.js"></script>
+<script src="app/js/jquery.min.js"></script>
 
 </body>
 </html>
