--- a/order_details.html
+++ b/order_details.html
@@ -377,27 +377,27 @@
               <tbody>
                 <tr>
                   <td><span class="red">*</span>收货人：</td>
-                  <td><input type="text" class="form-control" id="" placeholder="" value="卢洁"></td>
+                  <td><input type="text" class="form-control" id="" placeholder="" value="张三"></td>
                 </tr>
 				<tr>
                   <td><span class="red">*</span>手 机：</td>
-				  <td><input type="text" class="form-control" id="" placeholder="" value="15050690467"></td>
+				  <td><input type="text" class="form-control" id="" placeholder="" value="13912345678"></td>
                 </tr>
 				<tr>
                   <td><span class="red">*</span>收货人：</td>
-                  <td><input type="text" class="form-control" id="" placeholder="" value="卢洁"></td>
+                  <td><input type="text" class="form-control" id="" placeholder="" value="张三"></td>
                 </tr>
 				<tr>
                   <td><span class="red">*</span>手 机：</td>
-				  <td><input type="text" class="form-control" id="" placeholder="" value="15050690467"></td>
+				  <td><input type="text" class="form-control" id="" placeholder="" value="13912345678"></td>
                 </tr>
 				<tr>
                   <td><span class="red">*</span>收货人：</td>
-                  <td><input type="text" class="form-control" id="" placeholder="" value="卢洁"></td>
+                  <td><input type="text" class="form-control" id="" placeholder="" value="张三"></td>
                 </tr>
 				<tr>
                   <td><span class="red">*</span>地 址：</td>
-				  <td><input type="text" class="form-control" id="" placeholder="" value="梅村街道香梅花园106_302室"></td>
+				  <td><input type="text" class="form-control" id="" placeholder="" value="上海市闵行区XX小区xx号xx室"></td>
                 </tr>
 				
 				
@@ -467,7 +467,7 @@
 
 <!--Footer-part-->
 <div class="row-fluid">
-  <div id="footer" class="span12"> Copyright &copy; 2015 Shanghai Top Beauty Industrial Co.,Ltd</div>
+	<div id="footer" class="span12"> Copyright &copy; Goonic All rights reserved.</div>
 </div>
 <!--end-Footer-part-->
 <script src="app/js/jquery.min.js"></script>
