--- a/role_modify.html
+++ b/role_modify.html
@@ -487,7 +487,7 @@
 
 <!--Footer-part-->
 <div class="row-fluid">
-  <div id="footer" class="span12"> Copyright &copy; 2015 Shanghai Top Beauty Industrial Co.,Ltd</div>
+	<div id="footer" class="span12"> Copyright &copy; Goonic All rights reserved.</div>
 </div>
 <!--end-Footer-part-->
 <script src="app/js/jquery.min.js"></script>
